# canary-probe

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml  test.yml
canary-probe/: Cargo.toml
canary-probe/src/: exec.rs  lib.rs  main.rs
